Made it so that you can specify the name of your template or just use the type name from the model. Change to not require a language to be specified. If no language is specified, it will use templates from the root. Got rid of initializer. Templates will automatically be resolved and cached on demand. Changed to use layouts specified by the templates instead of manually building the layouts. Added embedded resource resolver and folder resource resolver for resolving template contents.

--- a/Source/Email/Email.csproj
+++ b/Source/Email/Email.csproj
@@ -52,22 +52,37 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Models\SimpleEmailModel.cs" />
+    <Compile Include="Models\SimpleEmail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="RazorTemplates\en-AU\SimpleEmail\Html.cshtml" />
-    <EmbeddedResource Include="RazorTemplates\en-AU\SimpleEmail\PlainText.cshtml" />
-    <EmbeddedResource Include="RazorTemplates\en-AU\SimpleEmail\Subject.cshtml" />
-    <EmbeddedResource Include="RazorTemplates\en-AU\_Layout.Html.cshtml" />
-    <EmbeddedResource Include="RazorTemplates\en-AU\_Layout.PlainText.cshtml" />
+    <EmbeddedResource Include="Templates\en-AU\SimpleEmail\Html.cshtml" />
+    <EmbeddedResource Include="Templates\en-AU\SimpleEmail\PlainText.cshtml" />
+    <EmbeddedResource Include="Templates\en-AU\SimpleEmail\Subject.cshtml" />
     <None Include="packages.config" />
+    <EmbeddedResource Include="Templates\SimpleEmail\Html.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\SimpleEmail\PlainText.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\SimpleEmail\Subject.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\_Layout.Html.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\_Layout.PlainText.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <None Include="web.config" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\Footer.png" />
     <EmbeddedResource Include="Images\Logo.png" />
-    <Content Include="Images\Readme.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RazorSharpEmail\RazorSharpEmail.csproj">
