--- a/Source/RazorSharpEmail.Tests/RazorSharpEmail.Tests.csproj
+++ b/Source/RazorSharpEmail.Tests/RazorSharpEmail.Tests.csproj
@@ -48,8 +48,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="RazorEngine, Version=3.3.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="RazorEngine">
       <HintPath>..\packages\RazorEngine.3.3.0\lib\net40\RazorEngine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -68,11 +67,10 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="SimpleEmailFormattingTests.cs" />
+    <Compile Include="EmailFormattingTests.cs" />
     <Compile Include="TemplatedEmailExtensions.cs" />
     <Compile Include="Given.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RazorEmailTemplatingInitializationTests.cs" />
     <Compile Include="RazorEmailTemplatingTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -87,6 +85,9 @@
       <Project>{b551dbcb-e732-4cfb-9361-cd74f1ba82f5}</Project>
       <Name>RazorSharpEmail</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="EmailFormattingTests.Should_format_email_from_modal.approved.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
