--- a/Source/RazorSharpEmail/RazorSharpEmail.csproj
+++ b/Source/RazorSharpEmail/RazorSharpEmail.csproj
@@ -36,8 +36,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RazorEngine, Version=3.3.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="RazorEngine">
       <HintPath>..\packages\RazorEngine.3.3.0\lib\net40\RazorEngine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -58,17 +57,13 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="EmailTemplate.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="NullLogger.cs" />
+    <Compile Include="EmbeddedTemplateResolver.cs" />
+    <Compile Include="FolderTemplateResolver.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Compile Include="EmbeddedEmailResourceProvider.cs" />
     <Compile Include="IEmailFormatter.cs" />
-    <Compile Include="IEmailResourceProvider.cs" />
-    <Compile Include="IEmailTemplateInitializer.cs" />
     <Compile Include="LanguageScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RazorEmailFormatter.cs" />
-    <Compile Include="RazorEmailTemplateInitializer.cs" />
     <Compile Include="TemplatedEmail.cs" />
   </ItemGroup>
   <ItemGroup>
