--- a/Source/Email/Email.csproj
+++ b/Source/Email/Email.csproj
@@ -52,21 +52,22 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Models\SimpleEmail.cs" />
+    <Compile Include="Models\ForgotPassword.cs" />
+    <Compile Include="Models\Welcome.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Templates\en-AU\SimpleEmail\Html.cshtml" />
-    <EmbeddedResource Include="Templates\en-AU\SimpleEmail\PlainText.cshtml" />
-    <EmbeddedResource Include="Templates\en-AU\SimpleEmail\Subject.cshtml" />
+    <EmbeddedResource Include="Templates\en-AU\Welcome\Html.cshtml" />
+    <EmbeddedResource Include="Templates\en-AU\Welcome\PlainText.cshtml" />
+    <EmbeddedResource Include="Templates\en-AU\Welcome\Subject.cshtml" />
     <None Include="packages.config" />
-    <EmbeddedResource Include="Templates\SimpleEmail\Html.cshtml">
+    <EmbeddedResource Include="Templates\ForgotPassword\Html.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Templates\SimpleEmail\PlainText.cshtml">
+    <EmbeddedResource Include="Templates\ForgotPassword\PlainText.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Templates\SimpleEmail\Subject.cshtml">
+    <EmbeddedResource Include="Templates\ForgotPassword\Subject.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Templates\_Layout.Html.cshtml">
@@ -76,6 +77,15 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Templates\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\Welcome\Html.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\Welcome\PlainText.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\Welcome\Subject.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <None Include="web.config" />
