--- a/Source/RazorSharpEmail/RazorSharpEmail.csproj
+++ b/Source/RazorSharpEmail/RazorSharpEmail.csproj
@@ -60,10 +60,10 @@
     <Compile Include="EmbeddedTemplateResolver.cs" />
     <Compile Include="FolderTemplateResolver.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Compile Include="IEmailFormatter.cs" />
+    <Compile Include="IEmailGenerator.cs" />
     <Compile Include="LanguageScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RazorEmailFormatter.cs" />
+    <Compile Include="RazorEmailGenerator.cs" />
     <Compile Include="TemplatedEmail.cs" />
   </ItemGroup>
   <ItemGroup>
