Add a simple inline test to make it easier to debug.

--- a/Source/Email/Email.csproj
+++ b/Source/Email/Email.csproj
@@ -88,6 +88,15 @@
     <EmbeddedResource Include="Templates\Welcome\Subject.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Templates\Simple\Html.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\Simple\PlainText.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\Simple\Subject.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <None Include="web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +108,11 @@
       <Project>{b551dbcb-e732-4cfb-9361-cd74f1ba82f5}</Project>
       <Name>RazorSharpEmail</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Templates\simple.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
