--- a/Source/RazorSharpEmail/RazorSharpEmail.csproj
+++ b/Source/RazorSharpEmail/RazorSharpEmail.csproj
@@ -58,7 +58,7 @@
     </Compile>
     <Compile Include="EmailTemplate.cs" />
     <Compile Include="EmbeddedTemplateResolver.cs" />
-    <Compile Include="FolderTemplateResolver.cs" />
+    <Compile Include="DirectoryTemplateResolver.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="IEmailGenerator.cs" />
     <Compile Include="LanguageScope.cs" />
